[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/evac/icon.png" type="Texture" id=1]
[ext_resource path="res://sprites/evac/car.png" type="Texture" id=2]
[ext_resource path="res://scripts/evac/evac_place.gd" type="Script" id=3]
[ext_resource path="res://sprites/roads/evac_visualiser.png" type="Texture" id=4]
[ext_resource path="res://sprites/evac/evac_visualiser_to_point0.png" type="Texture" id=5]
[ext_resource path="res://sprites/evac/evac_visualiser_to_point1.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17, 17 )

[sub_resource type="AnimatedTexture" id=3]
flags = 2
frames = 2
fps = 10.9
frame_0/texture = ExtResource( 5 )
frame_1/texture = ExtResource( 6 )
frame_1/delay_sec = 0.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17, 17 )

[node name="evac_place" type="TouchScreenButton"]
shape = SubResource( 2 )
shape_centered = false
script = ExtResource( 3 )
speed = 60.0
mission_state = "start"

[node name="line_to_pointer" type="Line2D" parent="."]
show_behind_parent = true
points = PoolVector2Array( 0, 0, 0, 0 )
texture = SubResource( 3 )
texture_mode = 1

[node name="line_to_road_switch" type="Line2D" parent="."]
visible = false
show_behind_parent = true
points = PoolVector2Array( -48, -7, -16, -21 )
texture = ExtResource( 4 )
texture_mode = 1

[node name="evac_moving" type="Area2D" parent="."]
visible = false
collision_layer = 12
collision_mask = 12
monitoring = false

[node name="coll" type="CollisionShape2D" parent="evac_moving"]
shape = SubResource( 1 )

[node name="spr" type="Sprite" parent="evac_moving"]
texture = ExtResource( 2 )

[node name="spr" type="Sprite" parent="."]
show_behind_parent = true
texture = ExtResource( 1 )

[node name="wait_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="pressed" from="." to="." method="_on_evac_place_pressed"]
[connection signal="body_entered" from="evac_moving" to="." method="_on_evac_moving_body_entered"]
[connection signal="timeout" from="wait_timer" to="." method="_on_wait_timer_timeout"]
